logs/zcp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zcp'...
Compiling './lib/python3.5/site-packages/zcp/ceilometer_client.py'...
***   File "./lib/python3.5/site-packages/zcp/ceilometer_client.py", line 32
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zcp/cmd'...
Compiling './lib/python3.5/site-packages/zcp/cmd/proxy.py'...
***   File "./lib/python3.5/site-packages/zcp/cmd/proxy.py", line 122
    print "ZCP terminated"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zcp/common'...
Compiling './lib/python3.5/site-packages/zcp/common/conf.py'...
***   File "./lib/python3.5/site-packages/zcp/common/conf.py", line 115
    print "Can't find zabbixceilometer-proxy configurate file"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zcp/common/db'...
Compiling './lib/python3.5/site-packages/zcp/nova_client.py'...
***   File "./lib/python3.5/site-packages/zcp/nova_client.py", line 35
    except exceptions.Unauthorized, e:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zcp/task'...
Listing './lib/python3.5/site-packages/zcp/task/polling'...
Compiling './lib/python3.5/site-packages/zcp/zabbix_handler.py'...
***   File "./lib/python3.5/site-packages/zcp/zabbix_handler.py", line 48
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zcp-1.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
